--- a/Main.resx
+++ b/Main.resx
@@ -217,4 +217,52 @@
         upUOcSmQSc0AAAAASUVORK5CYII=
 </value>
   </data>
+  <data name="button9.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAKAAAABaCAYAAAA/xl1SAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAZdEVYdFNvZnR3YXJlAEFkb2JlIEltYWdlUmVhZHlxyWU8AAAJpElEQVR4Xu2d63MUZRaH/UO2
+        9gNVllt+8POWLq630iqWrOGiICCgYgAlXEJC7omJwyRGVyqsoCAobKR2ESxKIgtaCIkSA6LIRSJeSJBb
+        ggbIDCEhZDLH95yenvTMnOnpTJJm3pnz4akmv75MD/3UeW8NuQsABOGOwYaC4BZsKAhuwYaCcwY7foTu
+        ysXwW/5cuH3mOxXxxwk8bCgkJtjrhxs7NkHnnIfg0lMPwO+Ln4Ce4inQ/8kmwH3Rxws8bCjYM/jLKap4
+        F6fdTwJeWzEZfBXToadsKvSUTgX/miWAx0SfJ8TChgIPVjbfljVU8S49/Tej6inhfOXTaBvNzZ1rYain
+        W53KX08QAR3Tf+RguOp1zXsYrhX80xAvVPXi4X89BwaONatL8NfNdNhQGAYrGFW96arqzZhIVc+npDOa
+        3JCAtI3CKmJJqBpe7VKX5D8nU2FDwaCveQ90Lco2qt5zj8D1wmxDPCUV/tkOlC66Ovo8c+FWS6O6NP95
+        mQgbZjqBK5fgen0FiXd55oPQnTvJkAibXDXSpZGv6gNiRWRR+y7PetAQMboaKm7+xwOBzl/VR8V+dqbB
+        hplKMDAIVPVenExN7pUXHiOJzKpHqMqG1RAFswP7ifEERHzVs6ka4mdG30cmwYaZCFY9nFDGqodV7CpO
+        rdAggxEojlQRJBicmNxYt1JVww51C/x9pTtsmElQ1du7DTqfn0RV77ecx+F6kap6caZWSCzVDOMo2A68
+        hlMJsRriPQRv9alb4u8zXWHDTAEni82qh80mVT1zdMuIQrnZB8RRMc4HxuHyzIm2TXAMqmnHaphpE9hs
+        mO5g1cNlNBxgmFUPBYhb9UywoqnjsG+IEtqB/USU1bGAJup4Ws7LkGrIhunMwImWcNWjCeW8LEcTylbC
+        fUMbEspsh7oXXM7De42+/3SDDdOR8DJaqOmkqqce9ohFUXJg03pViRsX1ZRjP3AkUscj3Zfz2DDdwKWw
+        K7lPD1c9JYf15QHH4PGqWcX+Il7LDpwLHFEf0AZf7Qtpu5zHhukCLn2ZE8ooBE0oo0SjlAKrJ4psB/YT
+        jT4gf41kwAnsdFvOY8N0oL/ls+GqpwYERtUbfTUixrsPaIOv5nkYOLIvbSaw2VBncEL52htF4akQrHrh
+        QQM+wJIp4C+crAV4r9ECmvRurkyLCWw21Bl8ZYrm4tRgg+SzLKPhA71WORPO1xdowdWq2bYS4kg5+vvr
+        BhvqDK3j4osCSkIckVqbQqwqZxrq4eDR49DcejSlwXs8ueN98BdlRUhnBZvj6O+vG2yoM/j6VFhAcz03
+        9MDwYeJD/eLwN/Dloa9SGpTwWONO8Bc/GSGdFX/tAvWV+b8HXWBDnXEq4KGW1pQG71EE1JBEAn7d8A58
+        2tQC+z9vSmk+PXgIDu34wJjKsUhnRQRMQRIJeHhzPfx3zwHY1bgPdjfuDfPx7v+nDLt276V73P+B6gNK
+        BdQLOwFxRHnBu5Ak3LHhbXhz7TtQv/ZtWLf+Xdiw8b2UYP3G9+ne8B476paKgLphJyA9NPVAA8WToSH3
+        WZg+eyHMnr8QchYthbyVxbAir+iO81JeCWzJX0T3aCcfIgKmIIkERAbKp5CAKB+y+OUVULCqDPILSu84
+        uQXlsLVwCfSVZsfcdzQiYAoiAuoFG+qMCKgXbKgzIxEw65mXqR84f8FyWLKsxGD5K5GYeYilK3hxxgoR
+        UHOcCIgPt7FoDjSsmwG7Ns6CTxpWwr7tVbRtfFftC7FnyzzKraxfU6EGLLw8Y4EIqDlOBLy+SmXbsgB+
+        fgCgfR7AxTqAy28A/DALBlr+pJhA28DxR419F70GXV74/TsPrCoshbx8XqDRIgJqjlMB+7b/A4LfT4Sh
+        HxbAUPtrEOx4HW6dmAO+gxPA33wP+JomwM0jj9C+obOrCTi3GrqPe6C4WAQcK9hQZ5wK2Pu/5ATECigC
+        jh1sqDMioF6woc6MRsCBk8+B78CfSULc9h19HILtdSLgOMKGOpOsgENnaxTVMHBqAVVCJPBzmdpXKwKO
+        I2yoM8kLiJLVUMXDaohY5RMBxwc21JnRCWiPCDj2sKHOJCsgdCjBLngBzqutCf6spBMBxw821JlkBMTm
+        Fuf3tm+uhG0bIzm5vzosoQg49rChziQjIFx4jUTLeakkgvk5JbDprQqqhiLg+MCGOuNUwL4PJ0VUwNs/
+        rYafvqgmEa34T3vUwGRYQFkJGVvYUGecCNhTOA0ubcqGwVN/h6G2Z2m0i5JRvw/XflVFDG9V39DaB0RJ
+        l+VV0FsxVjCzEr0fcfISgwioOU4EvFE8FQ7XzICeo49BsG2Kkquapl9un15Mqx84AY3bW8efiZyK6fDC
+        gY+q6C2Ztn3T4cRnxVQlcXts56MRmPtMWvdUQVVlWUIJRUDNcdwER7yMYMz9oXC0EtJkrIQYS3HDAgbP
+        1tDkNJx6GKDtCVUx1QAFq+S5ChhovTf0Fo0BtBcZ+8wRdZeXBjX4TiEnnokIqDnJDELMpbhEa8E4UY0C
+        4mtaQycnqZ+raT9mN768D/xNd9O5/ua/wOCZ/Ah5UUIRMBY21Bn3BawVAUcBG+pMagh4jwjoEDbUmaQF
+        DA1CSCIFitj/bTbliQTEbe9XfzXeolHioox4nAiYGDbUmWQFNEXBynW7bRlBginpzH2sgLg/VAXN8wI/
+        Fhl5+DwRMB5sqDOjFZCqFv5MWaREcQUMnUfVks4drnwmIiAPG+rMaASkyegoIkXiBQyiYFHnmasnJiIg
+        DxvqTLICmiseuCRnxXwRwSBWwEC7l86NOS8koghoDxvqzIgFPPMijYA7v/FAnbccal4tC4MrF7jyMSwh
+        UwE7vPDR1lfoWOu5+O+HcR3ZFFsE5GFDnUmmAuKKBa7x4jIZvmRggrLgK1ooj10FRNlorTd03vK8UhIS
+        35wx5RUBedhQZ+z+k3ITEvBDaxNcR302fNOlU1VCK9icDvfnalSzWkRLcVYB8RjzeBNr9SMBL3hJZicC
+        vleY60hAn2eu+sr834MusKHO4O8Iwd/9i3QXPEUPKYaqedC7dRYETmdREzzU8SYB52MJnjP2Ifjn9tZa
+        6GqZGX6Jwcy5c63n9f/yL9jwby+UV3oS8nn1cuj3zOHv3QL+rpDo768bbCgIbsGGguAWbCgIbsGGguAW
+        bCgIbsGGguAWbCgIbsGGguAWbCgIbsGGguAWbCgIbsGGguAWbCgIbsGGguAWbCgIbsGGguAWbCgIbsGG
+        guAWbCgIbsGGguAWbCgIbsGGguAWbCgIbsGGguAWbCgIbsGGguAWbCgIbsGGguAOcNcfIcm9A6Xbh0oA
+        AAAASUVORK5CYII=
+</value>
+  </data>
 </root>
