แกไข้ข้อมูลร้าน

--- a/Main.resx
+++ b/Main.resx
@@ -996,6 +996,27 @@
         LZ4R1+M5ejt8vB/Pa2r+Azk03FlOyfT6AAAAAElFTkSuQmCC
 </value>
   </data>
+  <data name="button8.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAB8AAAAgCAYAAADqgqNBAAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
+        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAACXBIWXMAAOuYAADrmAEG2E80AAADU0lE
+        QVRYR9WXS0xTQRSGK27cmRhcGd3pygcm7ly5obfURmEDhWBclJanyMMHmBQxwlZUsAQWSkyIceNj4WOh
+        iQoC0qAueCS4MIgbnkYT0BQ4/n+ZgQuUUtpLjH/ypZd7Z85/ZubMvYPNankNQ7MfNIPveXa75BnGJK4f
+        gmNehyPcxlL5lo2PgG4gxU6nXEpPl1KXS5gE7g0BB1C9LJDJ+CDoptHljAzpq6mRyYYGGa6vl1aPR9CO
+        CYwAp+qamJTpkjGgwUIJRv2yslJCzc0ira0y09Qk7YWF4nM4+HxYdY9fCKI5BHoAA78C17DOU0VI4HlF
+        hYQCAZGWFplFApwBD2ZGhYhPXrs9kvFrcADTm4TfAiTwoygtTZ6Vly8mgBngErAGVJjNax3jCXAc6Gfb
+        wYoE5rAEE6gBFqEKtTlhzWwIuMK4wOlANRtzuL4HdoPVCUwzgRdYgqDfL1wOFS52mYIeBj1cu4ZzmdJx
+        t1Cq3KfEk2qfx/02kKza6QTymYDeevh7QYWMTaZgNP5A4xslmTL2tkpksFb6H5VJdc66CWwDVWBe7fc3
+        KuzG0m8lsGyMEY+/WzSW/qvh3wEmkB0xgT3gMaBxH0hRoaMLDTV8c/VGNNasTYA1kALMxkeBih5Fpqre
+        2HhVAldyTrMIQ+jHN9oCWDImUaUbgbAx14rFFdVYM1QrXfeLpciVxtGuGDGJKt0ILBnfLM2SiY4YjAdq
+        ZbqrWu5UuhMy5lrFZdxY4eaUJ2QcDBuf/x+M3/8LYzyfgvHtsiwLjTtjG3HcxpRquBfgBGLILQSa7Kze
+        2hFrqcY5AO9dQ9pqzsjvT36MKoKhRo+4PI411uKn8cLie7sRMEgoH8ecB9fPyuzHdRLQI07EmFId+P39
+        DH6BOiT01ecwIidgxYi1VKcTYBYEwS5wEgmMrknASmNKdbwIGCzgSU3V91zmBFgDCRfXaqHjDvAUMGA2
+        A5ngDIywBtr8ueFdYJkxhc48h30D/PSx4sP/AOCcxpPHTlAH5mhqqTGFAD5AYwb+ApiAGwRAL/gJ+Izf
+        Yx4WrTGmEKQdMLjmD+AplNczgLugCeSCfcAaYwqBxoA25gyMgieARchdkIx1TwKqh4VC8EEwDjgDXsAa
+        YBGqFlslm+0vNAiVhjDv2nAAAAAASUVORK5CYII=
+</value>
+  </data>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         AAABAAEAMDAAAAEAIACoJQAAFgAAACgAAAAwAAAAYAAAAAEAIAAAAAAAgCUAAAAAAAAAAAAAAAAAAAAA
