--- a/ReportSale.resx
+++ b/ReportSale.resx
@@ -409,6 +409,65 @@
         1ujgMFxojQ4Ow4XW6OAwPIjxfxA2ZLVO94/WAAAAAElFTkSuQmCC
 </value>
   </data>
+  <data name="button4.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAKAAAABkCAYAAAABtjuPAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAZdEVYdFNvZnR3YXJlAEFkb2JlIEltYWdlUmVhZHlxyWU8AAAMRklEQVR4Xu2c228d1RWHT18q
+        tQURWmjr2IkSO39A31tKSNMi9YmnqlKoklbAYwUvbdWnvvaJvJQQLlUFIpirHS5JIHYuiIsQkISLEnJ3
+        gFycHJvYcULgJJmub+LlbG+vg+1z7M2ZyRrp05yz9p61L+s3a2bPGbuSZZnjfGeYRsdJhWl0nFSYRsdJ
+        hWl0nFSYxrIx2NFZGV3QVblwY1dlqENo72ofvrXztqGFnX+o/rzzbmFVC3D3mbalfxz+yZLbq+2dHcOL
+        OivHb1hSObmgs1Jd1GWOqwyYxrIRCPAHIsC/igB3VTu6xoY6ln3ValQ7lo1V27t2iwDvFwH+0AVYAhDg
+        uZu6fjRya9cj1UXLRiTQl4Wshbk8tGjZ6OAtnY+fvKnzBhdgwTklAjwjmU+yy6gR7FZmVDL1A9XFLsBC
+        c65jcZuI76AR4JZH+n148GdL2qxxlQHTWDZG2xevkGDW4uDWg3swoUc+D8ZlTTKIX/wbZSYiwNrpny5d
+        bo2rDJjGsnFm4dJVEsxLcXDr0t61WUTyb/k8MKWsOQZyv+LfKKvHpaG2pauscZUB01g2RICrJZAzzoBC
+        VTgmsDK1yhsFf/jFv1VuUasuXLrGGlcZMI1lQzLInwlkFNiiUBtq6/yLNa4yYBrLxnB71z15IO0Atzo1
+        uWTfa42rDJjGsnH2lvb7Rm5uq43cvDCbFT/+LmiPWFgburX9PmtcZcA0lo1DK39/z5EVd9aOLr8zu8bv
+        xvntVW4P+DWsnGBgEr+5ym31WJEN/Mrgl5M5Vpc7JiF1a4duX3mPNa4yYBrLRt/j/13T99jjtb5HH8um
+        8MijOf3rlUeu8fBVtk1i/VXW1ePhbNtDMetmzn8iHlpX61+33hchRWZjf9/q3r6tNSG7Rt/80T89PTNE
+        6tY2butfbY2rDJjGsvHKK6+sfvnll2tCVkBq9N8aVxkwjWXDBdi6mMayMdcC3LhxY9bb25v19PRMATvl
+        1nEN4gIsOnMlQBXeSy+9lL366qvZpk2bsi1btmSvvfZavscGlFN3joToAiw6cyFARCV+su3bt2cffvhh
+        duzYsezkyZPZmTNnsmq1mu9PnDiRHT16NNu9e3e2bdu2/Lg5EKELsOg0K0CyHhlu79692djYmLicfjt3
+        7lz20UcfTRwf+5wFLsCi04wAua/jsjowMCCuZrddvnw527dvXy7AJkToAiw6jQqQyycCRES1Wk1cTd4Q
+        2Pnz57PR0dHsm2++ya5cuTJecm27cOFC9vbbb2fPP/+82cYMcAEWnUYFiPh27NiRCyzeLl26lB05ciS/
+        J9y6dWt+uUWM8YZIDx061MyixAVYdBoRIIuOF198MV9wkMXIbmGGO336dL76ffbZZ7Pnnnsuv8SyALG2
+        L774Il/AIGirrWlwARadRjMgIBwy3DvvvJN98skn2eeff559+eWX+WfKyWqIj/2BAwekuanbZ599ltd1
+        AU7FNJaNZgQIZMPw2Z4+ktEs2d3dnfX392dDQ0PS3OTt66+/zj7++OO8HvUt/9PgAiw6zQowRMVI1uMS
+        /O677+bZkGeB1iJkcHAwr4cALX8zwAVYdOZSgAqr2vfeey9feLBCjsXHd+79+ng7RsTaYPYDF2DRmWsB
+        IqYXXngh27NnT74atjYeRH/wwQcTdS0/M8QFWHTmWoDcB3JJ5flgvQ1hkh3Jgjyq8UuwjWksG/ORAYFn
+        fzyOOX78eDY8PCxNTd24FPObMSvpBn8NcQEWnbkWIIjPXFS8dPD666/nq+D9+/fnv4jEG9mQbMljmAbu
+        BV2ARWcuBMhlFwFxKeWeThcW7IFFCUIk21kbmVIf41j+vwUXYNFpRoAIi1879B5u8+bNeeZjz3fNaIgT
+        cZEFrY1LNPVcgJMxjWWjEQHqfR4vEvBzHK9iHT58OF9U8O4fD5epR/YT/xMZsZ4AeU5IuQtwMqaxbDQq
+        QETFi6fcw/FSQbiR0ciE/ApCdnzmmWfydwZPnTo1XuPaxkKEn/Dw5wKcjGksG40KkMvqrl276i4sDh48
+        mIsOYXFJ/vTTT826Fy9ezN5///1GH8W4AItOIwIEhMW+3suo/AJCxuO1LBYflvjYeEzDS63+MsJUTGPZ
+        aFSAQNbi57R6q9vpNu4Xd+7cmfshq1ptTIMLsOg0I0BEw0qY53zcx/Fu4Ew2LrtkvjfeeCM/voF7P8UF
+        WHQkgGsIZBTYWaG/5/ICApdkMtvZs2fzP1JSRkZGcjvv/3HvyGUX8TWY+RQE6P8bpsiIAFZJIC9FgZ01
+        ZDEExeWURQev67/55pv5o5q33norv9SyKKGcenoP2ST0+0/WuMqAaSwbIoQ7RIRNZcAYxEVWRGiK/kJi
+        1W8U+i3CX2GNqwyYxrIhomiTQB6yAlwAjtB/a1xlwDSWDQkiPCD3UmNBYFua8fvG893d3X9/+umnv2eN
+        qwyYxrIhgWQhcpPQLZyT71c00C3KFRHgqNxPbnjwwQdvFhGa4yoDprFsSEARYOWJJ55Y8NRTT/1Tvu8V
+        zgtfCRdbiK9EeOflnm+fLGz+duDAgRvXrl1bcQEWHAlsLsAnn3yysmHDBj4v6unpuUPsqyXY97YK9EdY
+        KX1bLAKs7N+/v+ICdJx5xDQ6TipMo+OkwjSm5OL3/1F0zgr/ExYIA8JywarXklgxSYlpTIk1KQWjV9gh
+        rBWy8c9WvZbEiklKTGNKrEkpGP8SyIKIzwU4S0xjSqxJKRj3CwiPTOgCnCWmMSXWpBSMJQKXX+4BXYCz
+        xDSmxJqUAlNIAcqeLE6/74rjM9+YxhTIYMkYawRWjgyelaTe0JNVqHPXuI06ZJlfCBOTJzBxewRdhWLj
+        eOqG9YA61OWeLbRrG5RxnLYNln+FurHY6glQA8wKWftBu2Ed5gI79XQuGDf94TjsEM4Bn7FxrNrwy/E6
+        Z/GqnGPUN/CZe1hYYMVqPjGNKZDB6r0TA2cSdRJ0gsNyAsNnJkwnkonGhqCwUx+7JQIChB8CQrm2wbH1
+        2iDwfOcYytW/QhuUhza+x20jBvXLHvDHXsVB/9QezoUKS4UJfFbfHM9xelLFfvSznjzs+Y6d/mhbfO+1
+        4jTfmMYUyIA14OwJbph5gAlSMYCKRYOiYtIzWDMKNiZWjwOOwZf60IB9WxsqQGzUiX1qgENb3DYBx6YZ
+        VDNSePJQjzHwXecizHJA+5oVwzZjAXJ8KDgVpJ48Or7wZFJR5sdZsZpPTGMKZLBMDgHRQIYTQ/CZrPAy
+        FU+2fmfSw3rYQhHgi0nWTKQ+tA38aN24Dc1+sU+YiQDVH+PCJ5/prwpT61KPcvUJtB36QYRaFvvX/rLX
+        ExS0HS1H2MwVdRAzfaEdnZvlVqzmE9OYEhm0TpROQnz2K/FkAxOIDTSY4WfqhhnB8hFSrzz0qahYQltc
+        L/RHPwg+QlJ77FOhPuXxXMRtTjceiMs5GbDRDxUh3+G6FSDopDOpoV2JJxtREVQmEpue+dTRwOolSLPO
+        dAGrVx76VLTt0BbX0wyETU8wPSEsn4r2I54L6mOP69UbD8Tl9DnsN31REV63AiQz6OTGk67Ek83eqo8t
+        DKzWY5KnC1i98tAnAeOyhS28TGo9gkuWoR422kV0ZDP26jv0GUIfJi6J4zZtk+Oxa2acbjwQlmt92uXk
+        zO/5ZE953l4cn/nGNKZkfCIY/MRZKOjkhcSTPTFp498VbHFgNaDaRr2A1Quo+qSvCEx9WRlQM6P2QcWK
+        PeyX+tTvoO3Hc0H/OV7teqxeTuuNB8Jy9U//8Ld2PAYTcxnHZ74xjSlhEgQmlrM6nwRBJy8kFodOPvcx
+        lIFOJLb4eF1Bhj5i4jYUPU6hv3oZDftLYBkPGZ0ybNonPSb0GQuQupZv6tF/HTPf2Sv1xgNhua7s6V8+
+        7+Mx0D5elwLUoAOTrxMXE4uDIMWBAERgLWSoj//QR8x0AkQAGkSI+6sCAQKMTYNLWVgXWyxAfOtllr3a
+        VdDhMbqgwVZvPBCXhydi/suH7LWP1+09IOIIM8lsQGwcq1h15ppv6y8isk6AmVLPN/Zm/Ibgh36aMUmJ
+        aXScVJhGx0mFaXScVJhGx0mFaXScVJhGx0mFaXScVJhGx0mFaXScVJhGx0mFaXScVJhGx0mFaXScVJhG
+        x0mFaXScVJhGx0mFaXScVJhGx0mFaXScVJhGx0mFaXScVJhGx0mFaXScVJhGx0mFaXScVJhGx0mFaXSc
+        NGSV/wORN5ZZsu7ezQAAAABJRU5ErkJggg==
+</value>
+  </data>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         AAABAAEAMDAAAAEAIACoJQAAFgAAACgAAAAwAAAAYAAAAAEAIAAAAAAAgCUAAAAAAAAAAAAAAAAAAAAA
