--- a/ReportSale.resx
+++ b/ReportSale.resx
@@ -411,61 +411,61 @@
   </data>
   <data name="button4.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAAKAAAABkCAYAAAABtjuPAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAZdEVYdFNvZnR3YXJlAEFkb2JlIEltYWdlUmVhZHlxyWU8AAAMRklEQVR4Xu2c228d1RWHT18q
-        tQURWmjr2IkSO39A31tKSNMi9YmnqlKoklbAYwUvbdWnvvaJvJQQLlUFIpirHS5JIHYuiIsQkISLEnJ3
-        gFycHJvYcULgJJmub+LlbG+vg+1z7M2ZyRrp05yz9p61L+s3a2bPGbuSZZnjfGeYRsdJhWl0nFSYRsdJ
-        hWl0nFSYxrIx2NFZGV3QVblwY1dlqENo72ofvrXztqGFnX+o/rzzbmFVC3D3mbalfxz+yZLbq+2dHcOL
-        OivHb1hSObmgs1Jd1GWOqwyYxrIRCPAHIsC/igB3VTu6xoY6ln3ValQ7lo1V27t2iwDvFwH+0AVYAhDg
-        uZu6fjRya9cj1UXLRiTQl4Wshbk8tGjZ6OAtnY+fvKnzBhdgwTklAjwjmU+yy6gR7FZmVDL1A9XFLsBC
-        c65jcZuI76AR4JZH+n148GdL2qxxlQHTWDZG2xevkGDW4uDWg3swoUc+D8ZlTTKIX/wbZSYiwNrpny5d
-        bo2rDJjGsnFm4dJVEsxLcXDr0t61WUTyb/k8MKWsOQZyv+LfKKvHpaG2pauscZUB01g2RICrJZAzzoBC
-        VTgmsDK1yhsFf/jFv1VuUasuXLrGGlcZMI1lQzLInwlkFNiiUBtq6/yLNa4yYBrLxnB71z15IO0Atzo1
-        uWTfa42rDJjGsnH2lvb7Rm5uq43cvDCbFT/+LmiPWFgburX9PmtcZcA0lo1DK39/z5EVd9aOLr8zu8bv
-        xvntVW4P+DWsnGBgEr+5ym31WJEN/Mrgl5M5Vpc7JiF1a4duX3mPNa4yYBrLRt/j/13T99jjtb5HH8um
-        8MijOf3rlUeu8fBVtk1i/VXW1ePhbNtDMetmzn8iHlpX61+33hchRWZjf9/q3r6tNSG7Rt/80T89PTNE
-        6tY2butfbY2rDJjGsvHKK6+sfvnll2tCVkBq9N8aVxkwjWXDBdi6mMayMdcC3LhxY9bb25v19PRMATvl
-        1nEN4gIsOnMlQBXeSy+9lL366qvZpk2bsi1btmSvvfZavscGlFN3joToAiw6cyFARCV+su3bt2cffvhh
-        duzYsezkyZPZmTNnsmq1mu9PnDiRHT16NNu9e3e2bdu2/Lg5EKELsOg0K0CyHhlu79692djYmLicfjt3
-        7lz20UcfTRwf+5wFLsCi04wAua/jsjowMCCuZrddvnw527dvXy7AJkToAiw6jQqQyycCRES1Wk1cTd4Q
-        2Pnz57PR0dHsm2++ya5cuTJecm27cOFC9vbbb2fPP/+82cYMcAEWnUYFiPh27NiRCyzeLl26lB05ciS/
-        J9y6dWt+uUWM8YZIDx061MyixAVYdBoRIIuOF198MV9wkMXIbmGGO336dL76ffbZZ7Pnnnsuv8SyALG2
-        L774Il/AIGirrWlwARadRjMgIBwy3DvvvJN98skn2eeff559+eWX+WfKyWqIj/2BAwekuanbZ599ltd1
-        AU7FNJaNZgQIZMPw2Z4+ktEs2d3dnfX392dDQ0PS3OTt66+/zj7++OO8HvUt/9PgAiw6zQowRMVI1uMS
-        /O677+bZkGeB1iJkcHAwr4cALX8zwAVYdOZSgAqr2vfeey9feLBCjsXHd+79+ng7RsTaYPYDF2DRmWsB
-        IqYXXngh27NnT74atjYeRH/wwQcTdS0/M8QFWHTmWoDcB3JJ5flgvQ1hkh3Jgjyq8UuwjWksG/ORAYFn
-        fzyOOX78eDY8PCxNTd24FPObMSvpBn8NcQEWnbkWIIjPXFS8dPD666/nq+D9+/fnv4jEG9mQbMljmAbu
-        BV2ARWcuBMhlFwFxKeWeThcW7IFFCUIk21kbmVIf41j+vwUXYNFpRoAIi1879B5u8+bNeeZjz3fNaIgT
-        cZEFrY1LNPVcgJMxjWWjEQHqfR4vEvBzHK9iHT58OF9U8O4fD5epR/YT/xMZsZ4AeU5IuQtwMqaxbDQq
-        QETFi6fcw/FSQbiR0ciE/ApCdnzmmWfydwZPnTo1XuPaxkKEn/Dw5wKcjGksG40KkMvqrl276i4sDh48
-        mIsOYXFJ/vTTT826Fy9ezN5///1GH8W4AItOIwIEhMW+3suo/AJCxuO1LBYflvjYeEzDS63+MsJUTGPZ
-        aFSAQNbi57R6q9vpNu4Xd+7cmfshq1ptTIMLsOg0I0BEw0qY53zcx/Fu4Ew2LrtkvjfeeCM/voF7P8UF
-        WHQkgGsIZBTYWaG/5/ICApdkMtvZs2fzP1JSRkZGcjvv/3HvyGUX8TWY+RQE6P8bpsiIAFZJIC9FgZ01
-        ZDEExeWURQev67/55pv5o5q33norv9SyKKGcenoP2ST0+0/WuMqAaSwbIoQ7RIRNZcAYxEVWRGiK/kJi
-        1W8U+i3CX2GNqwyYxrIhomiTQB6yAlwAjtB/a1xlwDSWDQkiPCD3UmNBYFua8fvG893d3X9/+umnv2eN
-        qwyYxrIhgWQhcpPQLZyT71c00C3KFRHgqNxPbnjwwQdvFhGa4yoDprFsSEARYOWJJ55Y8NRTT/1Tvu8V
-        zgtfCRdbiK9EeOflnm+fLGz+duDAgRvXrl1bcQEWHAlsLsAnn3yysmHDBj4v6unpuUPsqyXY97YK9EdY
-        KX1bLAKs7N+/v+ICdJx5xDQ6TipMo+OkwjSm5OL3/1F0zgr/ExYIA8JywarXklgxSYlpTIk1KQWjV9gh
-        rBWy8c9WvZbEiklKTGNKrEkpGP8SyIKIzwU4S0xjSqxJKRj3CwiPTOgCnCWmMSXWpBSMJQKXX+4BXYCz
-        xDSmxJqUAlNIAcqeLE6/74rjM9+YxhTIYMkYawRWjgyelaTe0JNVqHPXuI06ZJlfCBOTJzBxewRdhWLj
-        eOqG9YA61OWeLbRrG5RxnLYNln+FurHY6glQA8wKWftBu2Ed5gI79XQuGDf94TjsEM4Bn7FxrNrwy/E6
-        Z/GqnGPUN/CZe1hYYMVqPjGNKZDB6r0TA2cSdRJ0gsNyAsNnJkwnkonGhqCwUx+7JQIChB8CQrm2wbH1
-        2iDwfOcYytW/QhuUhza+x20jBvXLHvDHXsVB/9QezoUKS4UJfFbfHM9xelLFfvSznjzs+Y6d/mhbfO+1
-        4jTfmMYUyIA14OwJbph5gAlSMYCKRYOiYtIzWDMKNiZWjwOOwZf60IB9WxsqQGzUiX1qgENb3DYBx6YZ
-        VDNSePJQjzHwXecizHJA+5oVwzZjAXJ8KDgVpJ48Or7wZFJR5sdZsZpPTGMKZLBMDgHRQIYTQ/CZrPAy
-        FU+2fmfSw3rYQhHgi0nWTKQ+tA38aN24Dc1+sU+YiQDVH+PCJ5/prwpT61KPcvUJtB36QYRaFvvX/rLX
-        ExS0HS1H2MwVdRAzfaEdnZvlVqzmE9OYEhm0TpROQnz2K/FkAxOIDTSY4WfqhhnB8hFSrzz0qahYQltc
-        L/RHPwg+QlJ77FOhPuXxXMRtTjceiMs5GbDRDxUh3+G6FSDopDOpoV2JJxtREVQmEpue+dTRwOolSLPO
-        dAGrVx76VLTt0BbX0wyETU8wPSEsn4r2I54L6mOP69UbD8Tl9DnsN31REV63AiQz6OTGk67Ek83eqo8t
-        DKzWY5KnC1i98tAnAeOyhS28TGo9gkuWoR422kV0ZDP26jv0GUIfJi6J4zZtk+Oxa2acbjwQlmt92uXk
-        zO/5ZE953l4cn/nGNKZkfCIY/MRZKOjkhcSTPTFp498VbHFgNaDaRr2A1Quo+qSvCEx9WRlQM6P2QcWK
-        PeyX+tTvoO3Hc0H/OV7teqxeTuuNB8Jy9U//8Ld2PAYTcxnHZ74xjSlhEgQmlrM6nwRBJy8kFodOPvcx
-        lIFOJLb4eF1Bhj5i4jYUPU6hv3oZDftLYBkPGZ0ybNonPSb0GQuQupZv6tF/HTPf2Sv1xgNhua7s6V8+
-        7+Mx0D5elwLUoAOTrxMXE4uDIMWBAERgLWSoj//QR8x0AkQAGkSI+6sCAQKMTYNLWVgXWyxAfOtllr3a
-        VdDhMbqgwVZvPBCXhydi/suH7LWP1+09IOIIM8lsQGwcq1h15ppv6y8isk6AmVLPN/Zm/Ibgh36aMUmJ
-        aXScVJhGx0mFaXScVJhGx0mFaXScVJhGx0mFaXScVJhGx0mFaXScVJhGx0mFaXScVJhGx0mFaXScVJhG
-        x0mFaXScVJhGx0mFaXScVJhGx0mFaXScVJhGx0mFaXScVJhGx0mFaXScVJhGx0mFaXScVJhGx0mFaXSc
-        NGSV/wORN5ZZsu7ezQAAAABJRU5ErkJggg==
+        iVBORw0KGgoAAAANSUhEUgAAAKAAAABkCAYAAAABtjuPAAAABGdBTUEAALGPC/xhBQAAABl0RVh0U29m
+        dHdhcmUAQWRvYmUgSW1hZ2VSZWFkeXHJZTwAAAxGSURBVHhe7Zzbbx3VFYdPXyq1BRFaaOvYiRI7f0Df
+        W0pI0yL1iaeqUqiSVsBjBS9t1ae+9om8lBAuVQUimKsdLkkgdi6IixCQhIsScneAXJwcm9hxQuAkma5v
+        4uVsb6+D7XPszZnJGunTnLP2nrUv6zdrZs8Zu5JlmeN8Z5hGx0mFaXScVJhGx0mFaXScVJjGsjHY0VkZ
+        XdBVuXBjV2WoQ2jvah++tfO2oYWdf6j+vPNuYVULcPeZtqV/HP7Jktur7Z0dw4s6K8dvWFI5uaCzUl3U
+        ZY6rDJjGshEI8AciwL+KAHdVO7rGhjqWfdVqVDuWjVXbu3aLAO8XAf7QBVgCEOC5m7p+NHJr1yPVRctG
+        JNCXhayFuTy0aNno4C2dj5+8qfMGF2DBOSUCPCOZT7LLqBHsVmZUMvUD1cUuwEJzrmNxm4jvoBHglkf6
+        fXjwZ0varHGVAdNYNkbbF6+QYNbi4NaDezChRz4PxmVNMohf/BtlJiLA2umfLl1ujasMmMaycWbh0lUS
+        zEtxcOvS3rVZRPJv+Twwpaw5BnK/4t8oq8elobalq6xxlQHTWDZEgKslkDPOgEJVOCawMrXKGwV/+MW/
+        VW5Rqy5cusYaVxkwjWVDMsifCWQU2KJQG2rr/Is1rjJgGsvGcHvXPXkg7QC3OjW5ZN9rjasMmMaycfaW
+        9vtGbm6rjdy8MJsVP/4uaI9YWBu6tf0+a1xlwDSWjUMrf3/PkRV31o4uvzO7xu/G+e1Vbg/4NaycYGAS
+        v7nKbfVYkQ38yuCXkzlWlzsmIXVrh25feY81rjJgGstG3+P/XdP32OO1vkcfy6bwyKM5/euVR67x8FW2
+        TWL9VdbV4+Fs20Mx62bOfyIeWlfrX7feFyFFZmN/3+revq01IbtG3/zRPz09M0Tq1jZu619tjasMmMay
+        8corr6x++eWXa0JWQGr03xpXGTCNZcMF2LqYxrIx1wLcuHFj1tvbm/X09EwBO+XWcQ3iAiw6cyVAFd5L
+        L72Uvfrqq9mmTZuyLVu2ZK+99lq+xwaUU3eOhOgCLDpzIUBEJX6y7du3Zx9++GF27Nix7OTJk9mZM2ey
+        arWa70+cOJEdPXo02717d7Zt27b8uDkQoQuw6DQrQLIeGW7v3r3Z2NiYuJx+O3fuXPbRRx9NHB/7nAUu
+        wKLTjAC5r+OyOjAwIK5mt12+fDnbt29fLsAmROgCLDqNCpDLJwJERLVaTVxN3hDY+fPns9HR0eybb77J
+        rly5Ml5ybbtw4UL29ttvZ88//7zZxgxwARadRgWI+Hbs2JELLN4uXbqUHTlyJL8n3Lp1a365RYzxhkgP
+        HTrUzKLEBVh0GhEgi44XX3wxX3CQxchuYYY7ffp0vvp99tlns+eeey6/xLIAsbYvvvgiX8AgaKutaXAB
+        Fp1GMyAgHDLcO++8k33yySfZ559/nn355Zf5Z8rJaoiP/YEDB6S5qdtnn32W13UBTsU0lo1mBAhkw/DZ
+        nj6S0SzZ3d2d9ff3Z0NDQ9Lc5O3rr7/OPv7447we9S3/0+ACLDrNCjBExUjW4xL87rvv5tmQZ4HWImRw
+        cDCvhwAtfzPABVh05lKACqva9957L194sEKOxcd37v36eDtGxNpg9gMXYNGZawEiphdeeCHbs2dPvhq2
+        Nh5Ef/DBBxN1LT8zxAVYdOZagNwHcknl+WC9DWGSHcmCPKrxS7CNaSwb85EBgWd/PI45fvx4Njw8LE1N
+        3bgU85sxK+kGfw1xARaduRYgiM9cVLx08Prrr+er4P379+e/iMQb2ZBsyWOYBu4FXYBFZy4EyGUXAXEp
+        5Z5OFxbsgUUJQiTbWRuZUh/jWP6/BRdg0WlGgAiLXzv0Hm7z5s155mPPd81oiBNxkQWtjUs09VyAkzGN
+        ZaMRAep9Hi8S8HMcr2IdPnw4X1Tw7h8Pl6lH9hP/ExmxngB5Tki5C3AyprFsNCpARMWLp9zD8VJBuJHR
+        yIT8CkJ2fOaZZ/J3Bk+dOjVe49rGQoSf8PDnApyMaSwbjQqQy+quXbvqLiwOHjyYiw5hcUn+9NNPzboX
+        L17M3n///UYfxbgAi04jAgSExb7ey6j8AkLG47UsFh+W+Nh4TMNLrf4ywlRMY9loVIBA1uLntHqr2+k2
+        7hd37tyZ+yGrWm1Mgwuw6DQjQETDSpjnfNzH8W7gTDYuu2S+N954Iz++gXs/xQVYdCSAawhkFNhZob/n
+        8gICl2Qy29mzZ/M/UlJGRkZyO+//ce/IZRfxNZj5FATo/xumyIgAVkkgL0WBnTVkMQTF5ZRFB6/rv/nm
+        m/mjmrfeeiu/1LIooZx6eg/ZJPT7T9a4yoBpLBsihDtEhE1lwBjERVZEaIr+QmLVbxT6LcJfYY2rDJjG
+        siGiaJNAHrICXACO0H9rXGXANJYNCSI8IPdSY0FgW5rx+8bz3d3df3/66ae/Z42rDJjGsiGBZCFyk9At
+        nJPvVzTQLcoVEeCo3E9uePDBB28WEZrjKgOmsWxIQBFg5Yknnljw1FNP/VO+7xXOC18JF1uIr0R45+We
+        b58sbP524MCBG9euXVtxARYcCWwuwCeffLKyYcMGPi/q6em5Q+yrJdj3tgr0R1gpfVssAqzs37+/4gJ0
+        nHnENDpOKkyj46TCNKbk4vf/UXTOCv8TFggDwnLBqteSWDFJiWlMiTUpBaNX2CGsFbLxz1a9lsSKSUpM
+        Y0qsSSkY/xLIgojPBThLTGNKrEkpGPcLCI9M6AKcJaYxJdakFIwlApdf7gFdgLPENKbEmpQCU0gByp4s
+        Tr/viuMz35jGFMhgyRhrBFaODJ6VpN7Qk1Woc9e4jTpkmV8IE5MnMHF7BF2FYuN46ob1gDrU5Z4ttGsb
+        lHGctg2Wf4W6sdjqCVADzApZ+0G7YR3mAjv1dC4YN/3hOOwQzgGfsXGs2vDL8Tpn8aqcY9Q38Jl7WFhg
+        xWo+MY0pkMHqvRMDZxJ1EnSCw3ICw2cmTCeSicaGoLBTH7slAgKEHwJCubbBsfXaIPB85xjK1b9CG5SH
+        Nr7HbSMG9cse8MdexUH/1B7OhQpLhQl8Vt8cz3F6UsV+9LOePOz5jp3+aFt877XiNN+YxhTIgDXg7Alu
+        mHmACVIxgIpFg6Ji0jNYMwo2JlaPA47Bl/rQgH1bGypAbNSJfWqAQ1vcNgHHphlUM1J48lCPMfBd5yLM
+        ckD7mhXDNmMBcnwoOBWknjw6vvBkUlHmx1mxmk9MYwpksEwOAdFAhhND8Jms8DIVT7Z+Z9LDethCEeCL
+        SdZMpD60Dfxo3bgNzX6xT5iJANUf48Inn+mvClPrUo9y9Qm0HfpBhFoW+9f+stcTFLQdLUfYzBV1EDN9
+        oR2dm+VWrOYT05gSGbROlE5CfPYr8WQDE4gNNJjhZ+qGGcHyEVKvPPSpqFhCW1wv9Ec/CD5CUnvsU6E+
+        5fFcxG1ONx6IyzkZsNEPFSHf4boVIOikM6mhXYknG1ERVCYSm5751NHA6iVIs850AatXHvpUtO3QFtfT
+        DIRNTzA9ISyfivYjngvqY4/r1RsPxOX0Oew3fVERXrcCJDPo5MaTrsSTzd6qjy0MrNZjkqcLWL3y0CcB
+        47KFLbxMaj2CS5ahHjbaRXRkM/bqO/QZQh8mLonjNm2T47FrZpxuPBCWa33a5eTM7/lkT3neXhyf+cY0
+        pmR8Ihj8xFko6OSFxJM9MWnj3xVscWA1oNpGvYDVC6j6pK8ITH1ZGVAzo/ZBxYo97Jf61O+g7cdzQf85
+        Xu16rF5O640HwnL1T//wt3Y8BhNzGcdnvjGNKWESBCaWszqfBEEnLyQWh04+9zGUgU4ktvh4XUGGPmLi
+        NhQ9TqG/ehkN+0tgGQ8ZnTJs2ic9JvQZC5C6lm/q0X8dM9/ZK/XGA2G5ruzpXz7v4zHQPl6XAtSgA5Ov
+        ExcTi4MgxYEARGAtZKiP/9BHzHQCRAAaRIj7qwIBAoxNg0tZWBdbLEB862WWvdpV0OExuqDBVm88EJeH
+        J2L+y4fstY/X7T0g4ggzyWxAbByrWHXmmm/rLyKyToCZUs839mb8huCHfpoxSYlpdJxUmEbHSYVpdJxU
+        mEbHSYVpdJxUmEbHSYVpdJxUmEbHSYVpdJxUmEbHSYVpdJxUmEbHSYVpdJxUmEbHSYVpdJxUmEbHSYVp
+        dJxUmEbHSYVpdJxUmEbHSYVpdJxUmEbHSYVpdJxUmEbHSYVpdJxUmEbHSYVpdJw0ZJX/A5E3llmy7t7N
+        AAAAAElFTkSuQmCC
 </value>
   </data>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
